<GridLayout android:id="@+id/search_section_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:columnCount="2"
    android:rowCount="3"
    android:layout_margin="@dimen/big_padding"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/edit_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:fontFamily="sans-serif-light"
        android:hint="Latitude"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/edit_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:fontFamily="sans-serif-light"
        android:hint="Longitude"
        android:inputType="numberDecimal|numberSigned"/>

    <Button
        android:id="@+id/load_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/load_location_button_text" />

    <Button
        android:id="@+id/run_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/search_button_text"/>
</GridLayout>