...
            android:layout_gravity="center_horizontal"
            android:layout_column="1"
            android:layout_row="4"
            android:entries="@array/place_type_array"
            android:prompt="@string/place_type_prompt" />

        <CheckBox android:id="@+id/keyword_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
...
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="AIzaSyCgG0fI-uAhdByF0L63kB-9hjuWTjMpqwM"/>

        <EditText
            android:id="@+id/edit_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
...
