...
        <item>Lodging</item>
        <item>Cafe</item>
    </string-array>

    <!-- Toast/Snackbar Strings -->
    <string name="parse_double_exception">Input Values must be doubles</string>
    <string name="empty_field_exception">Please enter location (latitude/longitude)</string>
    <string name="api_key_button_title">Change API Key</string>
    <string name="change_key_dialog_title">Change Google Places API Key</string>
    <string name="request_issue_text">Problem with request:</string>
    <string name="zero_results_text">Zero Places Returned</string>
    <string name="request_sucess_text"> Places Returned</string>

...
